// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlightMatches(query, text) matches contains: been-kat-br[eak]able 1`] = `
<span>
  <span>
    been-kat-br
    <mark
      key="eak2"
    >
      eak
    </mark>
    able
  </span>
</span>
`;

exports[`highlightMatches(query, text) matches letters, in sequence: h[i]ghl[i]ght[i]ng-the-th[i]ngs 1`] = `
<span>
  <span>
    h
    <mark
      key="i2"
    >
      i
    </mark>
    ghl
    <mark
      key="i4"
    >
      i
    </mark>
    ght
    <mark
      key="i6"
    >
      i
    </mark>
    ng-the-th
    <mark
      key="i8"
    >
      i
    </mark>
    ngs
  </span>
</span>
`;

exports[`highlightMatches(query, text) matches the acronym: [e]xactly [e]xact sleek bespoke 1`] = `
<span>
  <span>
    <mark
      key="e2"
    >
      e
    </mark>
    xactly 
    <mark
      key="e4"
    >
      e
    </mark>
    xact sleek bespoke
  </span>
</span>
`;

exports[`highlightMatches(query, text) matches the acronym: [e]xactly[E]xactSleekBespoke 1`] = `
<span>
  <span>
    <mark
      key="e2"
    >
      e
    </mark>
    xactly
    <mark
      key="E4"
    >
      E
    </mark>
    xactSleekBespoke
  </span>
</span>
`;

exports[`highlightMatches(query, text) matches the start of a word: camelcase[Cas]e 1`] = `
<span>
  <span>
    camelcase
    <mark
      key="Cas2"
    >
      Cas
    </mark>
    e
  </span>
</span>
`;

exports[`highlightMatches(query, text) matches the start of a word: kebabcase-[ca]se 1`] = `
<span>
  <span>
    kebabcase-
    <mark
      key="ca2"
    >
      ca
    </mark>
    se
  </span>
</span>
`;

exports[`highlightMatches(query, text) matches the start of the text: [eg]g ego 1`] = `
<span>
  <span>
    <mark
      key="eg1"
    >
      eg
    </mark>
    g ego
  </span>
</span>
`;
